--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.0.1",
     "module-alias": "^2.2.3",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3"
