--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js",
+    "dev": "nodemon --exec babel-node src/app.js",
     "start": "node src/app.js"
   },
   "repository": {
@@ -27,7 +27,6 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.0.1",
-    "module-alias": "^2.2.3",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
@@ -35,9 +34,11 @@
     "pg": "^8.11.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.5",
+    "@babel/node": "^7.22.19",
+    "@babel/preset-env": "^7.23.5",
+    "babel-plugin-module-resolver": "^5.0.0",
     "prettier": "3.1.0"
-  },
-  "_moduleAliases": {
-    "@src": "src"
   }
 }
