--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
-  "functions": {
-    "src/app.js": {
-      "runtime": "@vercel/node@2.7.0"
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/app.js",
+      "use": "@vercel/node"
     }
-  },
-  "rewrites": [{ "source": "/(.*)", "destination": "/src/app.js" }]
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/app.js"
+    }
+  ]
 }
