--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec babel-node src/app.js",
-    "start": "node src/app.js"
+    "start": "node build/app.js",
+    "build": "babel src -d build"
   },
   "repository": {
     "type": "git",
