--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3"
   },
